--- a/Css/Style.Css
+++ b/Css/Style.Css
@@ -125,3 +125,15 @@ label{
     font-weight: bold;
     font-size: 12px;
 }
+
+.port{
+    position: absolute;
+    top: 2%;
+    display: flex;
+
+}
+.port a{
+    text-decoration: none;
+    color: white;
+    margin-left: 20px;
+}
